# finance-corpus

./: .gitignore  README.md  pyproject.toml
finance_corpus/: __init__.py  dedup.py  generate.py  pipeline.py  schema.py  taxonomy.py
scripts/: chat.py  finetune_qlora.py  generate_corpus.py  inspect_corpus.py  seed_examples.py  setup_colab_train.sh
tests/: test_corpus.py
