[project]
name = "finance-corpus"
version = "0.0.1"
description = "Original synthetic finance/econ/quant instruction dataset for fine-tuning"
requires-python = ">=3.11"
dependencies = ["anthropic>=0.92", "structlog>=24"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["finance_corpus"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
